--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<main>
     <h2>Titles That Tantalise</h2>
-    <ul>
+    <ul class="titles">
     {% for book in books %}
         <li>
-            <!-- <p><b>{{book.title}}</b></p>
-            <p>{{book.author}}</p> -->
             <a href="{{ url_for('book_details', id=book.id) }}">{{book.title}}</a>
             
         </li> 
@@ -22,5 +19,4 @@
         <input type="text" name="genre" id="genre">
         <input type="submit" value="Add Book">
     </form>
-</main>
 {% endblock %}
